[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyimagen"
version = "0.1.0"
description = "A PyQt6-based AI image generation desktop application"
readme = "README.md"
authors = [
    { name = "Rick Lamers", email = "ricklamers@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Desktop Environment",
]
keywords = ["ai", "image generation", "desktop", "gui", "pyqt"]
dependencies = [
    "PyQt6>=6.0.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "groq>=0.3.0",
    "numpy>=1.24.0",
    "fal-client>=0.5.0,<0.6.0",
    "nest-asyncio>=1.5.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ricklamers/pyimagen"
Repository = "https://github.com/ricklamers/pyimagen.git"
Issues = "https://github.com/ricklamers/pyimagen/issues"

[project.scripts]
pyimagen = "pyimagen.app:main"

[project.optional-dependencies]
dev = [
    "twine>=4.0.0",
    "build>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["pyimagen"] 